Add final project cleanup
- Created Java resource files for communication and persistence
- Added storedOrders.json with sample order data for testing.
- Added storedUsers.json with sample user credentials for authentication.
- Added external libraries as JARs
- Added client and server as JARs
- Updated README.md
- Added project report file
- Added sources.txt with paths for compilation